// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test responsive image test resize window 1`] = `
<DocumentFragment>
  <img
    class="sc-bdfBwQ dJiJvq"
    src="logo2x.png"
  />
</DocumentFragment>
`;

exports[`test responsive image test resize window 2`] = `
<DocumentFragment>
  <img
    class="sc-bdfBwQ dJiJvq"
    src="logo.png"
  />
</DocumentFragment>
`;
